tests/ui/const-generics/issues/issue-67945-2.min.stderr
error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/issue-67945-2.rs:9:27
   |
LL |         let x: Option<Box<Self>> = None;
   |                           ^^^^
   |
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions
   = help: alternatively, you can use `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 1 previous error

